--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "test:integration": "npm test -- --watch -c jest-integration-config.js",
     "test:staged": "npm test -- --findRelatedTests",
     "test:ci": "npm test -- --coverage",
-    "test:coveralls": "npm run test:ci && coveralls < coverage/lcov.info"
+    "test:coveralls": "npm run test:ci && coveralls < coverage/lcov.info",
+    "test:watch":"jest --watch"
   },
   "devDependencies": {
     "@shelf/jest-mongodb": "^1.2.1",
