--- a/package.json
+++ b/package.json
@@ -15,13 +15,14 @@
     "up": "npm run build && docker-compose up -d",
     "down": "docker-compose down",
     "check": "npm-check -s -u",
-    "test": "jest --passWithNoTests --runInBand --no-cache",
+    "test": "jest --passWithNoTests --silent --no-cache --noStackTrace --runInBand",
     "test:unit": "npm test -- --watch -c jest-unit-config.js",
     "test:integration": "npm test -- --watch -c jest-integration-config.js",
     "test:staged": "npm test -- --findRelatedTests",
     "test:ci": "npm test -- --coverage",
     "test:coveralls": "npm run test:ci && coveralls < coverage/lcov.info",
-    "test:watch": "jest --watch"
+    "test:watch": "jest --watch",
+    "test:verbose": "jest --passWithNoTests"
   },
   "devDependencies": {
     "@shelf/jest-mongodb": "^1.2.1",
