--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "up": "npm run build && docker-compose up -d",
     "down": "docker-compose down",
     "check": "npm-check -s -u",
-    "test": "jest --passWithNoTests --silent --no-cache --noStackTrace --runInBand",
+    "test": "jest --passWithNoTests  --no-cache --noStackTrace --runInBand",
     "test:unit": "npm test -- --watch -c jest-unit-config.js",
     "test:integration": "npm test -- --watch -c jest-integration-config.js",
     "test:staged": "npm test -- --findRelatedTests",
