--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   },
   "devDependencies": {
     "@shelf/jest-mongodb": "^1.2.1",
-    "@types/bcrypt": "^3.0.0",
+    "@types/bcrypt": "^3.0.1",
     "@types/express-serve-static-core": "^4.17.14",
     "@types/faker": "^5.1.4",
     "@types/graphql": "^14.5.0",
@@ -61,6 +61,7 @@
     "typescript": "^4.1.2"
   },
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "validator": "^13.5.2"
   },
   "engines": {
