--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "test:verbose": "jest --passWithNoTests"
   },
   "devDependencies": {
-    "@shelf/jest-mongodb": "^1.2.1",
+    "@shelf/jest-mongodb": "^1.2.4",
     "@types/bcrypt": "^3.0.1",
     "@types/express-serve-static-core": "^4.17.14",
     "@types/faker": "^5.1.4",
@@ -33,7 +33,7 @@
     "@types/graphql-iso-date": "^3.4.0",
     "@types/jest": "^26.0.15",
     "@types/jsonwebtoken": "^8.5.0",
-    "@types/mongodb": "^3.5.34",
+    "@types/mongodb": "^3.6.12",
     "@types/node": "^14.14.10",
     "@types/supertest": "^2.0.10",
     "@types/swagger-ui-express": "^4.1.2",
@@ -62,6 +62,7 @@
   },
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "mongodb": "^3.6.6",
     "validator": "^13.5.2"
   },
   "engines": {
