--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "repository": "github:rmanguinho/clean-ts-api",
   "homepage": "https://rmanguinho.github.io",
   "scripts": {
-    "start": "node dist/main/server.js",
+    "start": "sucrase-node src/main/server.ts",
     "debug": "nodemon -L --watch ./dist --inspect=0.0.0.0:9222 --nolazy ./dist/main/server.js",
     "build": "rimraf dist && tsc -p tsconfig-build.json",
     "build:watch": "rimraf dist && tsc -p tsconfig-build.json -w",
@@ -27,6 +27,7 @@
   "devDependencies": {
     "@shelf/jest-mongodb": "^1.2.4",
     "@types/bcrypt": "^3.0.1",
+    "@types/express": "^4.17.11",
     "@types/express-serve-static-core": "^4.17.14",
     "@types/faker": "^5.1.4",
     "@types/graphql": "^14.5.0",
@@ -56,12 +57,14 @@
     "lint-staged": "^10.5.2",
     "mockdate": "^3.0.2",
     "rimraf": "^3.0.2",
+    "sucrase": "^3.18.1",
     "supertest": "^6.0.1",
     "ts-jest": "^26.4.4",
     "typescript": "^4.1.2"
   },
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "express": "^4.17.1",
     "mongodb": "^3.6.6",
     "validator": "^13.5.2"
   },
