--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "test:unit": "npm test -- --watch -c jest-unit-config.js",
     "test:integration": "npm test -- --watch -c jest-integration-config.js",
     "test:staged": "npm test -- --findRelatedTests --forceExit",
-    "test:ci": "npm test -- --coverage --forceExit",
+    "test:ci": "npm test -- --coverage",
     "test:coveralls": "npm run test:ci && coveralls < coverage/lcov.info",
     "test:watch": "jest --watch",
     "test:verbose": "jest --passWithNoTests"
